--- a/SitioConsulta/web.config
+++ b/SitioConsulta/web.config
@@ -7,4 +7,6 @@
 	<system.web>
 		<compilation debug="true" targetFramework="4.0"/>
 	</system.web>
-</configuration>
+	<appSettings>
+	<add key="ServicioWeb.ServicioTURU" value="http://192.168.43.254:8091/ServicioTURU.asmx"/>
+	</appSettings></configuration>
