--- a/Administracion/Properties/Settings.settings
+++ b/Administracion/Properties/Settings.settings
@@ -1,7 +1,9 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Administracion.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="Administracion_ServicioWeb_ServicioTURU" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://localhost:8091/ServicioTURU.asmx</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
