--- a/Administracion/Administracion.csproj
+++ b/Administracion/Administracion.csproj
@@ -63,6 +63,12 @@
     <Compile Include="ABMTerminal.Designer.cs">
       <DependentUpon>ABMTerminal.cs</DependentUpon>
     </Compile>
+    <Compile Include="ABMViajesNacionales.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMViajesNacionales.Designer.cs">
+      <DependentUpon>ABMViajesNacionales.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmInicio.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -88,6 +94,9 @@
     <EmbeddedResource Include="ABMTerminal.resx">
       <DependentUpon>ABMTerminal.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ABMViajesNacionales.resx">
+      <DependentUpon>ABMViajesNacionales.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmInicio.resx">
       <DependentUpon>FrmInicio.cs</DependentUpon>
     </EmbeddedResource>
@@ -102,6 +111,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="app.config" />
     <None Include="Properties\Settings.settings">
