--- a/Administracion/Properties/Settings.settings
+++ b/Administracion/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="Administracion_ServicioWeb_ServicioTURU" Type="(Web Service URL)" Scope="Application">
-      <Value Profile="(Default)">http://192.168.0.106:8091/ServicioTURU.asmx</Value>
+      <Value Profile="(Default)">http://localhost/ServicioWeb/ServicioTURU.asmx</Value>
     </Setting>
   </Settings>
 </SettingsFile>
